@@ -18,6 +18,12 @@ repositories {
 
 def runeLiteVersion = 'latest.release'
 def pluginMainClass = 'com.truetilerenderer.TrueTileRendererPluginTest'
+def isMacOs = System.getProperty('os.name', '').toLowerCase().contains('mac')
+def runeLiteJvmArgs = ['-ea']
+
+if (isMacOs) {
+	runeLiteJvmArgs += ['--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED']
+}
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
@@ -87,7 +93,7 @@ tasks.register('run', JavaExec) {
 	classpath = sourceSets.test.runtimeClasspath
 	mainClass = pluginMainClass
 
-	jvmArgs "-ea"
+	jvmArgs runeLiteJvmArgs
 	args "--developer-mode", "--debug"
 }
 
